Comprehensive xlint correction pass